[tool.poetry]
name = "youtube-analytics-project"
version = "0.1.0"
description = ""
authors = ["gramm23 <serglapinofff@gmail.com>"]
readme = "README.md"
packages = [{include = "youtube_analytics_project"}]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
coverage = "^7.2.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
